--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -168,8 +168,8 @@
   }
   
   .card img {
-    width: 100%;
-    height: auto;
+    width: 350px;
+    height: 300px;
     max-height: 250px;
     object-fit: cover;
     border-radius: 10px;
@@ -257,7 +257,7 @@
   
   @media screen and (max-width: 768px) {
     .main {
-      margin: 0px 20px;
+      margin: 0px 0px;
       margin-top: 120px;
     }
   
